stateDiagram-v2
[*] --> running
running --> driving
driving --> fixing
fixing --> driving
running --> handoff
fixing --> handoff
handoff --> running: resume by origin
handoff --> fixing: resume by origin
running --> done
driving --> done
running --> failed
fixing --> failed
driving --> failed
failed --> driving: eligible lanes only
